change checkout styles & change collection product styles & change mobile footer styles.

--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/web/css/source/module/_listings.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Catalog/web/css/source/module/_listings.less
@@ -355,6 +355,7 @@
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 3;
         line-height: 1.3;
+        hyphens: manual;
     }
 }
     /* Custom Style */
