--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/checkout/_shipping.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/checkout/_shipping.less
@@ -52,7 +52,7 @@
 
         .form-login,
         .form-shipping-address {
-            .lib-css(margin-top, @checkout-shipping-address__margin-top);
+            margin-top: 24px;
             .lib-css(margin-bottom, @checkout-shipping-address__margin-top);
             .fieldset {
                 .field {
@@ -174,8 +174,8 @@
         tbody {
             td {
                 //.lib-css(border-top, @checkout-shipping-method__border);
-                .lib-css(padding-bottom, @checkout-shipping-method__padding);
-                .lib-css(padding-top, @checkout-shipping-method__padding);
+                //.lib-css(padding-bottom, @checkout-shipping-method__padding);
+                //.lib-css(padding-top, @checkout-shipping-method__padding);
                 &:first-child {
                     padding-left: 0;
                     padding-right: 0;
