--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/_extends.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/_extends.less
@@ -1602,20 +1602,23 @@
             display: inline-block;
             font-weight: normal;
             font-family: 'roboto-medium';
-            padding: 3px 0 0;
         }
         .mark {
-            border-top: 1px solid @border-color__base;
-            .lib-font-size(18);
-            padding-right: @indent__s;
+            border-top: 1px solid #E1E1E1;
+            padding-left: 24px;
+            padding-top: 20px;
+            padding-bottom: 20px;
 			.rtl-layout &{
 				 padding-right: 0;
 				 padding-left: @indent__s;
 			}
         }
         .amount {
-            border-top: 1px solid @border-color__base;
-            .lib-font-size(18);
+            border-top: 1px solid #E1E1E1;
+            font-size: 18px;
+            line-height: 21px;
+            padding-top: 16px;
+            padding-bottom: 20px;
         }
     }
     .msrp {
