--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/_typography.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/_typography.less
@@ -78,7 +78,8 @@
 		textarea:not([disabled]),
 		select:not([disabled]) {
 			&:focus {
-				.lib-css(box-shadow, 0 1px 3px #e1e1e1);
+				box-shadow: none;
+                outline: none;
 			}
 		}
 		input, textarea, select{
