--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_footer.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_footer.less
@@ -264,7 +264,7 @@
 	.footer-top-ads{
 		.ftop-newsletter{ margin:0 5%;}
 	}
-	.footer-box{ clear:both; padding-top:@indent__base;}
+	.footer-box{ clear:both; padding-top:48px;}
 	.page-footer{
 		.footer-social{ padding-top:10px;}
 		.copyright{
