--- a/app/code/Mageplaza/Osc/view/frontend/web/css/style.css
+++ b/app/code/Mageplaza/Osc/view/frontend/web/css/style.css
@@ -87,14 +87,28 @@
     padding-right: 10px;
     text-align: right;
     position: relative;
-    top: -55px;
+    top: -26px;
     font-size: 16px;
-    line-height: 19px;
+    line-height: 19px !important;
+}
+
+.checkout-index-index .page-title-wrapper {
+    margin-top: 4px !important;
+}
+.checkout-index-index .page-title-wrapper .page-title {
+    margin: 0;
 }
 
 @media (max-width: 767px){
     .osc-authentication-wrapper {
-        top: -46px;
+        padding-right: 16px;
+    }
+    .onestepcheckout-index-index .field.choice.col-mp {
+        padding-left: 20px !important;
+    }
+    .checkout-index-index .page-title-wrapper {
+        margin-top: 24px !important;
+        padding-left: 16px;
     }
 }
 
@@ -308,7 +322,10 @@ fieldset.field.col-mp {
 }
 
 .minicart-items .product-item-name {
-    font-size: 16px !important;
+    font-size: 14px !important;
+    line-height: 1.25;
+    color: #333333;
+    margin: 0;
 }
 
 .remove-wrapper {
@@ -499,7 +516,7 @@ fieldset.field.col-mp {
 }
 
 .checkout-agreements-block #co-place-order-agreement {
-    margin-bottom: 15px
+    margin-bottom: 0;
 }
 
 /**************************************************** Survey ****************************************************/
@@ -628,7 +645,7 @@ fieldset.field.col-mp {
     }
 
     .opc-wrapper .form-login, .opc-wrapper .form-shipping-address, .opc-wrapper .methods-shipping {
-        margin: 20px 0px 15px;
+        margin: 0;
     }
 
     .opc-block-summary {
@@ -662,6 +679,12 @@ fieldset.field.col-mp {
 
     .minicart-items .product-item-name {
         font-size: 14px !important;
+    }
+}
+
+@media only screen and (max-width: 428px) {
+    #checkout-step-shipping .create-account-block .confirmation, #checkout-step-shipping .create-account-block {
+        margin-top: 10px;
     }
 }
 
@@ -744,13 +767,18 @@ form#co-shipping-method-form div#shipping-method-buttons-container {
     padding: 0 10px;
 }
 
+.actions-toolbar {
+    margin-top: 0 !important;
+}
+
 .osc-trust-seal {
-    margin: 30px 0;
+    margin: 20px 0;
     text-align: center;
 }
 
 .page-title-wrapper .checkout-description {
     color: inherit;
+    margin: 0;
 }
 
 .onestepcheckout-index-index .field.choice {
