change checkout login styles.

--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/checkout/_checkout.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/checkout/_checkout.less
@@ -419,10 +419,8 @@
     .opc-wrapper .form-discount {
         max-width: unset;
     }
-    #checkoutSteps {
-        input[type="email"] {
+    .one-step-checkout-wrapper .form.form-login {
             margin-bottom: 20px;
-        }
     }
     .checkout-container, .opc-wrapper {
         margin: 0;
