--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/checkout/_shipping.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/checkout/_shipping.less
@@ -61,8 +61,9 @@
                     }
                 }
                 .note {
-                    font-size: @font-size__base;
-                    margin-top: @indent__s;
+                    font-size: 12px;
+                    line-height: 14px;
+                    margin-top: 8px;
                 }
             }
         }
