--- a/app/code/Magefan/Blog/view/frontend/layout/blog_category_view.xml
+++ b/app/code/Magefan/Blog/view/frontend/layout/blog_category_view.xml
@@ -12,7 +12,7 @@
     <update handle="blog_post_list"/>
     <body>
         <referenceContainer name="columns.top">
-            <block class="Magefan\Blog\Block\TopBanner" name="blog.posts.topbanner" template="post/topbanner.phtml" before="content" />
+            <block class="Magento\Newsletter\Block\Subscribe" name="blog.posts.topbanner" template="Magefan_Blog::post/topbanner.phtml" before="content" />
             <block class="Magefan\Blog\Block\MidCategories" name="blog.posts.midcategories" template="post/midcategories.phtml" />
         </referenceContainer>
         <referenceContainer name="content">
