--- a/app/code/Magefan/Blog/view/frontend/layout/blog_default.xml
+++ b/app/code/Magefan/Blog/view/frontend/layout/blog_default.xml
@@ -28,21 +28,12 @@
                     </action>
                 </block>
 
-                <block class="Magefan\Blog\Block\Sidebar\Popular" name="blog.sidebar.popular" template="sidebar/popular.phtml">
+                <block class="Magefan\Blog\Block\Sidebar\Recent" name="blog.sidebar.popular" template="Magefan_Blog::sidebar/popular.phtml">
                     <action method="setBlockTitle">
                         <argument name="time" xsi:type="string">Popular</argument>
                     </action>
                 </block>
-<!--                <block class="Magefan\Blog\Block\Sidebar\Archive" name="blog.sidebar.archive" template="sidebar/archive.phtml">-->
-<!--                    <action method="setCacheLifetime">-->
-<!--                        <argument name="time" xsi:type="string">86400</argument>-->
-<!--                    </action>-->
-<!--                </block>-->
-<!--                <block class="Magefan\Blog\Block\Sidebar\TagClaud" name="blog.sidebar.tagclaud" template="sidebar/tag_claud.phtml">-->
-<!--                    <action method="setCacheLifetime">-->
-<!--                        <argument name="time" xsi:type="string">86400</argument>-->
-<!--                    </action>-->
-<!--                </block>-->
+
                 <block class="Magefan\Blog\Block\Sidebar\Custom" name="blog.sidebar.custom" template="sidebar/custom.phtml" />
                 <block class="Magefan\Blog\Block\Sidebar\CustomTwo" name="blog.sidebar.custom2" template="sidebar/custom.phtml" />
                 <block class="Magefan\Blog\Block\Sidebar\Rss" name="blog.sidebar.rss" template="sidebar/rss.phtml">
