--- a/app/code/Magefan/Blog/view/frontend/layout/blog_default_view.xml
+++ b/app/code/Magefan/Blog/view/frontend/layout/blog_default_view.xml
@@ -18,22 +18,14 @@
 
                     <block class="Magefan\Blog\Block\Sidebar\Search" name="blog.sidebar.search" template="sidebar/search.phtml" />
 
-                    <block class="Magefan\Blog\Block\Sidebar\Newsletter" name="blog.sidebar.newsletter" template="sidebar/newsletter.phtml" />
-
-
-                <block class="Magefan\Blog\Block\Sidebar\Categories" name="blog.sidebar.category" template="sidebar/categories.phtml">
+                    <block class="Magento\Newsletter\Block\Subscribe" name="blog.sidebar.newsletter" template="Magefan_Blog::sidebar/newsletter.phtml" />
+                <block class="Magefan\Blog\Block\Sidebar\Categories" name="blog.sidebar.category" template="Magefan_Blog::sidebar/categories.phtml">
                     <action method="setCacheLifetime">
                         <argument name="time" xsi:type="string">86400</argument>
                     </action>
                 </block>
 
-<!--                    <block class="Magefan\Blog\Block\Sidebar\Recent" name="blog.sidebar.recent" template="sidebar/recent.phtml" >-->
-<!--                        <action method="setBlockTitle">-->
-<!--                            <argument name="time" xsi:type="string">Recent Posts</argument>-->
-<!--                        </action>-->
-<!--                    </block>-->
-
-                <block class="Magefan\Blog\Block\Sidebar\Popular" name="blog.sidebar.popular" template="sidebar/popular.phtml">
+                <block class="Magefan\Blog\Block\Sidebar\Recent" name="blog.sidebar.popular" template="Magefan_Blog::sidebar/popular.phtml">
                     <action method="setBlockTitle">
                         <argument name="time" xsi:type="string">Popular</argument>
                     </action>
