change blog newsletter style

--- a/app/code/Magefan/Blog/view/frontend/templates/sidebar/newsletter.phtml
+++ b/app/code/Magefan/Blog/view/frontend/templates/sidebar/newsletter.phtml
@@ -13,7 +13,7 @@
  * @var \Magento\Newsletter\Block\Subscribe $block
  */
 ?>
-<div class="newsletter">
+<div class="newsletter-blog">
     <span class="newsletter-title">Newsletter</span>
     <hr class="newsletter-line"/>
     <span class="newsletter-span">Enter your email address below to subscribe to our newsletter</span>
