--- a/app/design/frontend/Codazon/fastest/hightech/Magefan_Blog/web/css/blog-m.css
+++ b/app/design/frontend/Codazon/fastest/hightech/Magefan_Blog/web/css/blog-m.css
@@ -404,7 +404,7 @@
 .sidebar .widget .accordion {
     border: none !important;
 }
-.newsletter {
+.newsletter-blog {
     width: 285px;
     background: #F4FBFF;
     margin-bottom: 20px;
@@ -413,21 +413,21 @@
     position: relative;
     border-radius: 4px;
 }
-.newsletter form {
+.newsletter-blog form {
     position: relative;
 }
-.newsletter div.mage-error {
+.newsletter-blog div.mage-error {
     position: absolute;
     top: 0px;
 }
-.newsletter .newsletter-title {
+.newsletter-blog .newsletter-title {
     font-family: Roboto-Medium;
     font-weight: 500;
     font-size: 24px;
     line-height: 28px;
     color: #333333;
 }
-.newsletter .newsletter-line {
+.newsletter-blog .newsletter-line {
     height: 2px;
     width: 32px;
     margin-top: 12px;
@@ -435,7 +435,7 @@
     background-color: #155DA4;
     border: none;
 }
-.newsletter .newsletter-span {
+.newsletter-blog .newsletter-span {
 
     font-family: Roboto;
     font-size: 14px;
@@ -443,7 +443,7 @@
     text-align: center;
     color: #333333;
 }
-.newsletter .newsletter-input {
+.newsletter-blog .newsletter-input {
     padding: 12px 16px;
     width: 245px;
     height: 40px;
@@ -452,14 +452,14 @@
     border-radius: 4px;
     margin: 24px 0 12px 0;
 }
-.newsletter .newsletter-input::-webkit-input-placeholder{
+.newsletter-blog .newsletter-input::-webkit-input-placeholder{
     font-family: Roboto;
     font-size: 14px;
     line-height: 16px;
 
     color: #999999;
 }
-.newsletter button {
+.newsletter-blog button {
     padding: 10px 24px;
     width: 245px;
     background: #155DA4;
@@ -470,7 +470,7 @@
     line-height: 20px;
     color: #FFFFFF;
 }
-.newsletter button:hover {
+.newsletter-blog button:hover {
     background: #4F85BB;
     color: #FFFFFF;
     border: 1px solid #4F85BB;
