fix blog search bug.

--- a/app/code/Magefan/Blog/view/frontend/templates/sidebar/search.phtml
+++ b/app/code/Magefan/Blog/view/frontend/templates/sidebar/search.phtml
@@ -54,3 +54,10 @@
         return false;
     }
 </script>
+<script>
+    require(['jquery', 'domReady!'], function($) {
+        setInterval(function(){
+            $('#blog_search_mini_form .action.search').removeAttr('disabled');
+        }, 2000);
+    });
+</script>
